# djnotifier

./: .gitignore  MANIFEST.in  README.md  setup.cfg
.github/: FUNDING.yml
djnotifier/: __init__.py  apps.py  config.py  consumers.py  routing.py  utils.py
djnotifier/static/djnotifier/: notification.js  socket.js
djnotifier/static/djnotifier/notify/: notify.js
djnotifier/templates/djnotifier/: core.html
docs/: CUSTOMIZATION.md  QUICK_START.md  README.md  USAGE_EXAMPLE.md
example/: urls.py  views.py
example/templates/example/: anonymous.html  authenticated.html  base.html  notify.html
