[metadata]
name = djnotifier
version = 0.1.0
description = A web-based Django app to conduct real time notification.
keywords =
    push
    notification
    python
    django
    socket
    redis
    channels
    django-channels
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rk4bir/djnotifier
author = Raihan Kabir
author_email = rk4bir.dev@gmail.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django :: 3
    Framework :: Django :: 4
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Internet :: WWW/HTTP

[options]
package_dir =
    = djnotifier
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    Django >= 3
[options.packages.find]
where = djnotifier
exclude =
    Project*
    example*
    *egg-info
    __pycache__/
    venv*
    docs*
    *.sqlite3
    *.rdb
    manage.py
    requirements.txt
    .gitignore
    .git*
    .idea*
    .DS_Store*
    .DS_Store
