[metadata]
name = djnotifier
version = attr: djnotifier.__version__
url = https://github.com/rk4bir/djnotifier
author = Raihan Kabir
author_email = rk4bir.dev@gmail.com
description = A web-based Django app to conduct real time notification.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

classifiers =
    Environment :: Web Environment
    Framework :: Django :: 3
    Framework :: Django :: 4
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Internet :: WWW/HTTP

project_urls = 
    Documentation = https://github.com/rk4bir/djnotifier


[options]
python_requires = >=3.6
packages = find:
include_package_data = true
install_requires =
    Django >= 3
